--- a/BigMission.ChannelManagement.Shared/BigMission.ChannelManagement.Shared.csproj
+++ b/BigMission.ChannelManagement.Shared/BigMission.ChannelManagement.Shared.csproj
@@ -18,6 +18,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="MathNet.Numerics" Version="5.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="UnitsNet" Version="5.9.0" />
 		<PackageReference Include="BigMission.TestHelpers" Version="2.0.0-CI-20230702-221602" />
 	</ItemGroup>
