--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BigMission.ChannelManagement.Shared\BigMission.ChannelManagement.Shared.csproj" />
   </ItemGroup>
 
