--- a/BigMission.ChannelManagement.Tests/BigMission.ChannelManagement.Tests.csproj
+++ b/BigMission.ChannelManagement.Tests/BigMission.ChannelManagement.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BigMission.ChannelManagement.Shared\BigMission.ChannelManagement.Shared.csproj" />
+    <ProjectReference Include="..\BigMission.ChannelManagement\BigMission.ChannelManagement.csproj" />
   </ItemGroup>
 
 </Project>
