--- a/BigMission.ChannelManagement/BigMission.ChannelManagement.csproj
+++ b/BigMission.ChannelManagement/BigMission.ChannelManagement.csproj
@@ -3,9 +3,9 @@
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>disable</Nullable>
+		<Nullable>enable</Nullable>
 		<Title>Channel Management</Title>
-		<Version>1.0.2.0</Version>
+		<Version>1.1.0.0</Version>
 		<Authors>Brian Griggs</Authors>
 		<Company>Big Mission Motorsports, LLC</Company>
 		<Product>Red Mist</Product>
@@ -21,7 +21,7 @@
 	<ItemGroup>
 		<PackageReference Include="MathNet.Numerics" Version="5.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="UnitsNet" Version="5.49.0" />
+		<PackageReference Include="UnitsNet" Version="5.50.0" />
 		<PackageReference Include="BigMission.TestHelpers" Version="3.0.0" />
 	</ItemGroup>
 
