--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -8,10 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BigMission.ChannelManagement.Shared\BigMission.ChannelManagement.Shared.csproj" />
+    <ProjectReference Include="..\BigMission.ChannelManagement\BigMission.ChannelManagement.csproj" />
   </ItemGroup>
 
 </Project>
